tests/fixtures/LatestTests/VariableDeclarationTests/errors/uninitialized_use_in_binary_op.fg
/; EXPECT_ERROR: VariableNotFound
var y:int = x * 2
var x:int = 10

